[workspace]
resolver = "2"
members = [
    "descriptors", 
    "migrate-version",
    "recovery-phrases",
    "syncing/electrum",
    "syncing/esplora",
    "syncing/kyoto",
    "syncing/rpc",
    "persistence/memory",
    "persistence/sqlite",
    "starter-example",
]

[workspace.package]
authors = ["Bitcoin Dev Kit Developers"]
