[package]
name = "kyoto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bdk_kyoto = "0.9.0"
bdk_wallet = "1"
tokio = { version = "1", features = ["full"], default-features = false }
tracing = "0.1"
tracing-subscriber = "0.3"
